--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lyle's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Daniel</title>
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp">
@@ -29,7 +29,7 @@
 
         <div class="container">
             <a href="#">
-                <h3>Lyle</h3>
+                <h3>Daniel</h3>
             </a>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
@@ -57,21 +57,28 @@
 
         <div class="container">
             <div class="socials">
-                <script>
-                  importComponent(
-                    (component = "components/socials.html"),
-                    (targetDiv = "socials")
-                  );
-                </script>
-            </div>
+                <a href="https://www.linkedin.com/in/econometrics/" target="_blank">
+                    <i class="uil uil-linkedin"></i>
+                </a>
+                <a href="https://github.com/thegitofdaniel" target="_blank">
+                    <i class="uil uil-github"></i>
+                </a>
+                <a href="https://medium.com/@theblogofdaniel" target="_blank">
+                    <i class="uil uil-medium-m"></i>
+                </a>
+        </div>
 
             <div class="info">
-                <h1>Software Engineer</h1>
+                <h1>Consultant in Data &amp; AI for Finance</h1>
                 <h3>Hi, I'm Daniel Ruiz</h3>
                 <p>
-                    I'm an Economist turned into Data Scientist and Machine Learning Engineer. That's a fancy way of saying I love econometrics, developing models, and bringing them into production. I am very curious about Data, AI, and Finance.
+                    I'm an Economist turned into Data Scientist and Machine Learning Engineer. 
+                    That's a fancy way of saying I love econometrics, developing models, and bringing them into production. 
+                    I am very curious about Data, AI, and Finance. My curiosity has led me to develop awesome projects to clients all over Europe.
                 </p>
                 <a href="#contact" class="btn btn-primary">Let's Talk</a>
+                <a href="./assets/documents/CV - Daniel Ruiz.pdf" class="btn btn-primary" download><i
+                    class="uil uil-download-alt"></i>Download CV</a>
             </div>
 
             <div class="profile-area">
@@ -92,7 +99,7 @@
                 </div>
 
                 <div class="inner-circle">
-                    <img src="./images/lyle.png" alt="">
+                    <img src="./assets/images/daniel-ruiz-portrait-square.jpg" alt="">
                 </div>
 
             </div>
@@ -107,28 +114,18 @@
 
         <div class="container">
             <div class="image">
-                <img src="./images/daniel_portrait_square.png" alt="">
+                <img src="./assets/images/daniel-ruiz-portrait-square.jpg" alt="">
             </div>
             <div class="info">
                 <p>
                     I've helped many companies make sense of their data, and extract value from it when they thought it was very complicated. I asked the right questions, and I brought in the right technologies and attitude.
-                <div class="read-more-content">
-                    </p>
+                </p>
+                    <div class="read-more-content">
                     <p>
-                        XXX
-                    <p>
-                        XXX
-                    </p>
-                    <p>
-                        I've also built a custom python library for analyzing financial data. It simulates fixed income bonds, and then models its Valuation and a few portfolio properties. I use this package to plan my retirement.
-                    </p>
-                    <p>
-                        I love working in fast-paced challenging environments especially when there are many numbers to be crunched.
+                        XXXX
                     </p>
                 </div>
                 <a class="read-more">Show More</a>
-                <a href="./images/CV - Daniel Ruiz.pdf" class="btn btn-primary" download><i
-                        class="uil uil-download-alt"></i>Download CV</a>
                 </p>
             </div>
         </div>
@@ -464,7 +461,7 @@
                 <span class="material-icons-sharp">language</span>
                 <h3>Software Development</h3>
                 <p>
-                    I introduce Data & AI teams to best practices of MLOPS, Software Engineering, and Agile. I help them work together to deliver excellent data products faster and better. I help teams master GitHub, Azure, and Databricks.
+                    I introduce Data &amp; AI teams to best practices of MLOPS, Software Engineering, and Agile. I help them work together to deliver excellent data products faster and better. I help teams master GitHub, Azure, and Databricks.
                 </p>
             </div>
 
@@ -488,7 +485,7 @@
 
                 <div class="project">
                     <div class="thumbnail">
-                        <img src="./images/docstring-generator.gif" alt="">
+                        <img src="./assets/images/pypi-interesting.png" alt="">
                     </div>
                     <h2>interesting</h2>
                     <p>
@@ -502,7 +499,7 @@
 
                 <div class="project">
                     <div class="thumbnail">
-                        <img src="./images/fram-assistant.gif" alt="">
+                        <img src="./assets/images/thewebsiteofdaniel.png" alt="">
                     </div>
                     <h2>The Website of Daniel</h2>
                     <p>
@@ -562,7 +559,7 @@
             <div class="container">
                 <h1>Let's Talk</h1>
                 <p>
-                    I will get back to you.
+                    I will get back to you as soon as possible.
                 </p>
                 <form action="https://formspree.io/f/xoqgwwlw" method="POST">
                     <input type="text" name="Name" placeholder="Name" required>
@@ -589,13 +586,15 @@
                 <li><a href="#contact">Let's Talk</a></li>
             </ul>
             <div class="socials">
-                <div class="socials">
-                    <script>
-                        importComponent(
-                        (component = "components/socials.html"),
-                        (targetDiv = "socials")
-                        );
-                    </script>
+                <a href="https://www.linkedin.com/in/econometrics/" target="_blank">
+                    <i class="uil uil-linkedin"></i>
+                </a>
+                <a href="https://github.com/thegitofdaniel" target="_blank">
+                    <i class="uil uil-github"></i>
+                </a>
+                <a href="https://medium.com/@theblogofdaniel" target="_blank">
+                    <i class="uil uil-medium-m"></i>
+                </a>
             </div>
         </div>
         <div class="copyright">
