--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="styles/style.css" />
+  <script src="scripts/functions.js"></script>
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel</title>
-    <link rel="stylesheet" href="styles/style.css">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp">
@@ -66,7 +67,7 @@
                 <a href="https://medium.com/@theblogofdaniel" target="_blank">
                     <i class="uil uil-medium-m"></i>
                 </a>
-        </div>
+            </div>
 
             <div class="info">
                 <h1>Consultant in Data &amp; AI for Finance</h1>
@@ -121,12 +122,9 @@
                     I've helped many companies make sense of their data, and extract value from it when they thought it was very complicated. I asked the right questions, and I brought in the right technologies and attitude.
                 </p>
                     <div class="read-more-content">
-                    <p>
-                        XXXX
-                    </p>
+                    <p>XXXX</p>
                 </div>
                 <a class="read-more">Show More</a>
-                </p>
             </div>
         </div>
 
@@ -478,9 +476,9 @@
     </section>
 
     <section class="recent-work" id="portfolio">
+        <h1>Recent Work</h1>
         <div class="container">
-            <h4>Recent Work</h4>
-            <h1>Some recent projects that have been open-sourced.</h1>
+            <h4>Some open-source recent works.</h4>
             <div class="projects">
 
                 <div class="project">
@@ -492,7 +490,7 @@
                         The interesting Python package is a specialized toolkit for dealing with Brazilian fixed income titles. It provides functionalities to build, analyze, visualize, and valuate various types of fixed income instruments and portfolios made thereof.
                     <div class="action">
                         <a href="https://github.com/thegitofdaniel/interesting" target="_blank">Github</a>
-                        <a href="https://pypi.org/project/interesting" target="_blank">Live Demo</a>
+                        <a href="https://pypi.org/project/interesting" target="_blank">PyPi</a>
                     </div>
                     </p>
                 </div>
