--- a/index.html
+++ b/index.html
@@ -1,93 +1,83 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniel</title>
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles/style.css" />
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,600&display=swap">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/solid.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+      href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,600&display=swap"
+    />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/solid.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <!-- Scripts -->
     <script src="scripts/functions.js"></script>
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav>
-
-        <div class="container">
-            <a href="#">
-                <h3>Daniel</h3>
-            </a>
-            <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Let's Talk</a></li>
-            </ul>
-            <button id="menu-btn">
-                <span class="material-symbols-sharp">
-                    menu
-                </span>
-            </button>
-            <button id="close-btn">
-                <span class="material-symbols-sharp">
-                    close
-                </span>
-            </button>
-        </div>
-
+      <div class="container">
+        <a href="#">
+          <h3>Daniel</h3>
+        </a>
+        <ul>
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Let's Talk</a></li>
+        </ul>
+        <button id="menu-btn">
+          <span class="material-symbols-sharp">menu</span>
+        </button>
+        <button id="close-btn">
+          <span class="material-symbols-sharp">close</span>
+        </button>
+      </div>
     </nav>
 
     <div id="target-landing"></div>
     <script>
-        importComponent(
-        (component = "components/landing.html"),
-        (targetDiv = "target-landing")
-        );
+      importComponent((component = 'components/landing.html'), (targetDiv = 'target-landing'));
     </script>
 
     <div id="target-about"></div>
     <script>
-        importComponent(
-        (component = "components/about.html"),
-        (targetDiv = "target-about")
-        );
+      importComponent((component = 'components/about.html'), (targetDiv = 'target-about'));
     </script>
 
     <div id="target-skills"></div>
     <script>
-        importComponent(
-        (component = "components/skills.html"),
-        (targetDiv = "target-skills")
-        );
+      importComponent((component = 'components/skills.html'), (targetDiv = 'target-skills'));
     </script>
 
     <div id="target-services"></div>
     <script>
-        importComponent(
-        (component = "components/services.html"),
-        (targetDiv = "target-services")
-        );
+      importComponent((component = 'components/services.html'), (targetDiv = 'target-services'));
     </script>
 
     <div id="target-portfolio"></div>
     <script>
-        importComponent(
-        (component = "components/portfolio.html"),
-        (targetDiv = "target-portfolio")
-        );
+      importComponent((component = 'components/portfolio.html'), (targetDiv = 'target-portfolio'));
     </script>
 
     <!--
@@ -102,41 +92,31 @@
 
     <div id="target-contact"></div>
     <script>
-        importComponent(
-        (component = "components/contact.html"),
-        (targetDiv = "target-contact")
-        );
+      importComponent((component = 'components/contact.html'), (targetDiv = 'target-contact'));
     </script>
 
     <footer>
-        <div class="container">
-            <a href="#">
-                <h3>Daniel</h3>
-            </a>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Let's Talk</a></li>
-            </ul>
-            <div id="socialsTarget2"></div>
-            <script>
-                importComponent(
-                (component = "components/socials.html"),
-                (targetDiv = "socialsTarget2")
-                );
-            </script>
-        </div>
-        <div class="copyright">
-            Copyright &copy; Daniel Ruiz
-        </div>
+      <div class="container">
+        <a href="#">
+          <h3>Daniel</h3>
+        </a>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Let's Talk</a></li>
+        </ul>
+        <div id="socialsTarget2"></div>
+        <script>
+          importComponent((component = 'components/socials.html'), (targetDiv = 'socialsTarget2'));
+        </script>
+      </div>
+      <div class="copyright">Copyright &copy; Daniel Ruiz</div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./main.js"></script>
-
-</body>
-
+  </body>
 </html>
