--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="container">
             <a href="#">
-                <h3>Lyle</h3>
+                <h3>Daniel</h3>
             </a>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
@@ -54,69 +54,59 @@
     </nav>
 
     <section class="landing">
-
         <div class="container">
-          <div class="socials">
-            <a
-              href="https://www.linkedin.com/in/econometrics/"
-              target="_blank"
-              title="Visit my LinkedIn profile"
-            >
-              <i class="uil uil-linkedin"></i>
-            </a>
-            <a
-              href="https://github.com/thegitofdaniel"
-              target="_blank"
-              title="Visit my GitHub profile"
-            >
-              <i class="uil uil-github"></i>
-            </a>
-            <a
-              href="https://medium.com/@theblogofdaniel"
-              target="_blank"
-              title="Visit my Medium profile"
-            >
-              <i class="uil uil-medium-m"></i>
-            </a>
-          </div>
+            <div class="socials">
+                <a
+                href="https://www.linkedin.com/in/econometrics/"
+                target="_blank"
+                title="Visit my LinkedIn profile"
+                >
+                <i class="uil uil-linkedin"></i>
+                </a>
+                <a href="https://github.com/thegitofdaniel" target="_blank" title="Visit my GitHub profile">
+                <i class="uil uil-github"></i>
+                </a>
+                <a
+                href="https://medium.com/@theblogofdaniel"
+                target="_blank"
+                title="Visit my Medium profile"
+                >
+                <i class="uil uil-medium-m"></i>
+                </a>
+            </div>
 
             <div class="info">
-                <h1>Software Engineer</h1>
-                <h3>Hi, I'm Lyle Okoth</h3>
+                <h1>Consultant in Data &amp; AI for Finance</h1>
+                <h3>Hi, I'm Daniel Ruiz</h3>
                 <p>
-                    A software engineer with 3+ years of experience building and deploying both 
-                    desktop and web-based python applications that leverage natural language 
-                    processing. I mainly focus on building conversational AI agents that work with 
-                    humans to help them quickly and with minimum effort to accomplish various tasks.
+                    I'm an Economist turned into Data Scientist and Machine Learning Engineer. That's a fancy
+                    way of saying I love Econometrics, developing models, and make them solve real-life problems. I
+                    am very curious about Data, AI, and Finance.
                 </p>
                 <a href="#contact" class="btn btn-primary">Let's Talk</a>
+                <a
+                href="./assets/documents/CV - Daniel Ruiz.pdf"
+                class="btn btn-primary"
+                download="CV - Daniel Ruiz.pdf"
+                >
+                <i class="uil uil-download-alt"></i>
+                Download CV
+                </a>
             </div>
 
             <div class="profile-area">
-
                 <div class="outer-circle">
-                    <span class="material-symbols-outlined">
-                        design_services
-                    </span>
-                    <span class="material-symbols-outlined">
-                        dns
-                    </span>
-                    <span class="material-symbols-outlined">
-                        code
-                    </span>
-                    <span class="material-symbols-outlined">
-                        subscriptions
-                    </span>
+                    <span class="material-symbols-outlined">design_services</span>
+                    <span class="material-symbols-outlined">payments</span>
+                    <span class="material-symbols-outlined">code</span>
+                    <span class="material-symbols-outlined">subscriptions</span>
                 </div>
 
                 <div class="inner-circle">
-                    <img src="./images/lyle.png" alt="">
+                    <img src="./assets/images/daniel-ruiz-portrait-square.jpg" alt="" />
                 </div>
-
             </div>
-
         </div>
-
     </section>
 
     <section class="about" id="about">
@@ -508,42 +498,34 @@
         <h1>Services</h1>
         <div class="container">
             <div class="service">
-                <span class="material-icons-sharp">design_services</span>
-                <h3>Chat-bot Development</h3>
+                <span class="material-icons-sharp">model_training</span>
+                <h3>Model Development</h3>
                 <p>
-                    I design and develop chat-bots that can work with humans to accomplish various tasks. This includes 
-                    working with emails, spreadsheets, word documents, pdfs, calendars, APIs such as youtube, and various 
-                    applications such Google maps and e-commerce stores. Such bots could source clients for you, manage your daily schedules, 
-                    shop for you from your favorite eccomerce stores or even plan your routes.
+                    I development professional Machine Learning and Econometric models using the latest
+                    frameworks and technologies, and I am committed to generating a value-adding solution. The
+                    data and context should determine the complexity of the solution adopted.
                 </p>
             </div>
-
+        
             <div class="service">
-                <span class="material-icons-sharp">language</span>
-                <h3>Software Development</h3>
+                <span class="material-icons-sharp">diversity_3</span>
+                <h3>MLOPS</h3>
                 <p>
-                    I develop both web based and desktop applications. This includes libraries that can be resused, APIs that 
-                    expose critical data to your clients as well as desktop applications. I focus on scalability, 
-                    maintainability as well as security.
+                    I introduce Data &amp; AI teams to best practices of MLOPS, Software Engineering, and
+                    Agile. I help them work better together to deliver excellent data products faster through
+                    proven Ways of Working. I help teams master GitHub, Azure, and Databricks.
                 </p>
             </div>
-
+        
             <div class="service">
-                <span class="material-icons-sharp">devices</span>
-                <h3>Data Analysis</h3>
+                <span class="material-icons-sharp">payments</span>
+                <h3>Finance</h3>
                 <p>
-                    I do data analysis, especially tetxual data. This includes sourcing for data from APIs such as twitter, 
-                    youtube, web scraping of sites, extracting data from word and pdf documents as well as from images. 
-                    Preprocessing the data and analysing it i.e identifying topics of interest, carrying out named entity 
-                    recognition, detecting sentiment, summarizing, classifying text and creating Knowledge bases including 
-                    knowledge graphs. I can work with various storage solutions including no-sql such as mongo, sql based such 
-                    as PostgreSQL, such engines such as Elasticsearch and vectore stores such as Quadrant and caches such as 
-                    Redis.
+                    I use quantitative and qualitative financial data to scientifically perform the Valuation
+                    and risk of companies and bonds, as well as aggregate properties of portfolios.
                 </p>
             </div>
-
         </div>
-
     </section>
 
     <section class="portfolio" id="portfolio">
