--- a/index.html
+++ b/index.html
@@ -115,65 +115,21 @@
 
         <div class="container">
             <div class="image">
-                <img src="./images/lyle.png" alt="">
+                <img src="./assets/images/dalle-upward-arrow.png" alt="">
             </div>
             <div class="info">
                 <p>
-                    I have worked on a wide set of tasks in the natural language processing field including 
-                    topic modelling especially for reviews, text classification, sentiment analysis, 
-                    tokenization, named entity recognition, parts of speech tagging, text feature extraction as well as text annotation. 
-                    I am proficient in web scraping and have built various pipelines that scrape, preprocess 
-                    and store data from various sites into various data storage solutions such as document 
-                    databases (mongodb), sql databases (PostgreSQL), search engines(Elasticsearch) and graph 
-                    databases such as Neo4j. I have also worked with word and sentence embeddings, including 
-                    huggingface transformers from huggingface and openai embeddings as well as vector stores such 
-                    as Quadrant, Weaveit and Redis. I do data analysis, especially text analytics and my tools of 
-                    choice include nltk, spacy, transformers, numpy, pandas, scikit-learn, pyldavis, scrapy, 
-                    langchain and llamaindex.
+                    My curiosity has led me to develop awesome projects to clients all over Europe. I've had the privilege of unraveling the hidden potential within their data, employing the right questions and the latest technology stacks to deliver innovative solutions. Through this process, I've not only solved their immediate challenges but also emphasized the fundamental importance of data in shaping modern decision-making. By showcasing its ability to disrupt traditional business paradigms and unearth new value, I've made a tangible impact on both my clients' success and the broader landscape of innovation. It's a journey fueled by passion and purpose, and I'm excited to continue making strides in this ever-evolving field.
+                </p>
                 <div class="read-more-content">
-                    </p>
+                
+                    <p>           
+                        Since 2020, I've played a pivotal role in building greenfield Data Platforms to enable large-caps on AIML and maximize the value derived from data. My contributions include developing models for Energy and Gas consumption using Azure Machine Learning, utilizing state-of-the-art algorithms to input missing data, establishing MLOPS processes for model deployment, implementing robust data pipelines, and introducing agile methodologies to strengthen team collaboration.
                     <p>
-                        I've worked on numerous projects involving natural language processing. My favorite 
-                        and most challenging so far has been building a chat agent that helps youtubers 
-                        manage their youtube channel as well as give regular youtube users a better usage 
-                        experience. The chatbot enables the user to search youtube for videos, playlists, 
-                        channels, create playlists and add videos to those playlists, view video comments, 
-                        comment on videos, update and delete comments, answer comments, get channel and 
-                        video details, update chanel and video metadata, like videos and so much more. Another 
-                        interesting project is a python library that generates documentation for python projects. 
-                        Both projects are built with langchain and openai chat-gpt model.
-                        <!-- <div class="read-more-content"> -->
-                    <p>
-                        Another interesting project is a machine learning pipeline for training and deploying 
-                        classification models. This pipeline takes in a datasource, creates a custom data store 
-                        for storing the raw data including its metadata, generates features, both numerical and 
-                        categorical using scikit-learn pipelines and transformers and stores the features for 
-                        later use. It then creates and trains various classification models, picks the best three, 
-                        finetunes them, then finally picks the best perfoming classifier and deploys this model. It 
-                        also notifies the user over email of its progress. It's built with python,
-                         FastAPI, redis, celery, scikit-learn, docker and PostgreSQL.
-                    </p>
-                    <p>
-                        I've also built custom python libraries for working with various youtube 
-                        APIs including YouTube, Gmail and Calendar. These libraries are deployed 
-                        to pypi and are completely open-source. I've also built a FastAPI app 
-                        for keeping track of youtube influencers from kenya that runs a cron job 
-                        that periodically updates it storage using data from the youtube api. 
-                    </p>
-                    <p>
-                        I love working in fast-paced challenging environments especially where data sourcing and
-                        processing is involved. I currently work at a startup that I founded that is 
-                        building AI agents that work with humans to accomplish various tasks as well as 
-                        the tools that can be used by those ai agents. My focus is on tools that help 
-                        AI agents work with various Google APIs such as Gmail, YouTube, Calendar, Photos, 
-                        Sheets, Docs, Gmap and GSlides. I you are looking for an experinced python developer 
-                        wuth a passion for developing conversationalai agents, just reach using the form at the 
-                        bottom of this page.
+                        In addition to my core responsibilities, I've also been actively involved in fostering a culture of continuous learning and innovation within the teams I've worked with. This has included organizing knowledge-sharing sessions, conducting workshops on emerging technologies and best practices, and mentoring junior team members to help them grow their skills and expertise in data science and machine learning. Furthermore, I've been instrumental in fostering strong cross-functional relationships between data science, engineering, and business stakeholders, ensuring alignment of objectives and effective communication channels throughout project life-cycles. By championing a collaborative and growth-oriented environment, I've helped foster a sense of ownership and accountability among team members, resulting in greater efficiency and success in achieving our project goals.
                     </p>
                 </div>
                 <a class="read-more">Show More</a>
-                <a href="./images/LyleOkothCV.pdf" class="btn btn-primary" download><i
-                        class="uil uil-download-alt"></i>Download CV</a>
                 </p>
             </div>
         </div>
