--- a/index.html
+++ b/index.html
@@ -144,6 +144,31 @@
             <div class="skill">
                 <div class="head">
                     <div class="left">
+                        <span class="material-icons-sharp">model_training</span>
+                        <h4>Model Development</h4>
+                    </div>
+                    <div class="right">
+                        <span class="material-icons-sharp">expand_more</span>
+                    </div>
+                </div>
+
+                <div class="items">
+                    <div class="item">
+                        <h5>Econometrics</h5>
+                        <div class="progress-area">
+                            <div class="progress-bar">
+                                <div class="progress"></div>
+                            </div>
+                            <!-- <h5>92%</h5> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="skill">
+                <div class="head">
+                    <div class="left">
                         <span class="material-icons-sharp">design_services</span>
                         <h4>Chat-bot Development</h4>
                     </div>
@@ -377,66 +402,6 @@
                     </div>
                     <div class="item">
                         <h5>Quality Assurance</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="skill">
-                <div class="head">
-                    <div class="left">
-                        <span class="material-icons-sharp">design_services</span>
-                        <h4>Data Analysis</h4>
-                    </div>
-                    <div class="right">
-                        <span class="material-icons-sharp">expand_more</span>
-                    </div>
-                </div>
-
-                <div class="items">
-                    <div class="item">
-                        <h5>Scrapy, Selenium, Playwright</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>92%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Scikit-learn</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>85%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Pandas, Numpy</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Spacy, NLTK</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>pyldavis</h5>
                         <div class="progress-area">
                             <div class="progress-bar">
                                 <div class="progress"></div>
