--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
                 
                     <p>           
                         Since 2020, I've played a pivotal role in building greenfield Data Platforms to enable large-caps on AIML and maximize the value derived from data. My contributions include developing models for Energy and Gas consumption using Azure Machine Learning, utilizing state-of-the-art algorithms to input missing data, establishing MLOPS processes for model deployment, implementing robust data pipelines, and introducing agile methodologies to strengthen team collaboration.
+                    </p>
                     <p>
                         In addition to my core responsibilities, I've also been actively involved in fostering a culture of continuous learning and innovation within the teams I've worked with. This has included organizing knowledge-sharing sessions, conducting workshops on emerging technologies and best practices, and mentoring junior team members to help them grow their skills and expertise in data science and machine learning. Furthermore, I've been instrumental in fostering strong cross-functional relationships between data science, engineering, and business stakeholders, ensuring alignment of objectives and effective communication channels throughout project life-cycles. By championing a collaborative and growth-oriented environment, I've helped foster a sense of ownership and accountability among team members, resulting in greater efficiency and success in achieving our project goals.
                     </p>
                 </div>
                 <a class="read-more">Show More</a>
-                </p>
             </div>
         </div>
 
@@ -152,265 +152,97 @@
                     </div>
                 </div>
 
-                <div class="items">
-                    <div class="item">
-                        <h5>Econometrics</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>92%</h5> -->
-                        </div>
-                    </div>
-                </div>
+                <div class="items" id="items1"></div>
+                <script src="scripts/functions.js"></script>
+                <script>
+                    var items = [
+                    ["Econometrics", 100],
+                    ["Time-Series Analysis", 100],
+                    ["Machine Learning", 100],
+                    ["Classification Models", 100],
+                    ["Regression Analysis", 100],
+                    ["Forecasting", 100],
+                    ["Bayesian Methods", 100],
+                    ["Support Vector Machines (SVM)", 100],
+                    ["Dimensionality Reduction", 100],
+                    ["Feature Engineering", 100],
+                    ["Model Validation and Evaluation", 100],
+                    ["Anomaly Detection", 100],
+                    ["Hyperparameter Tuning", 100],
+                    ["Deep Learning", 90],
+                    ["Natural Language Processing (NLP)", 90],
+                    ["Ensemble Methods", 90],
+                    ["Computer Vision", 80],
+                    ["Reinforcement Learning", 80],
+                    ["Explainable AI (XAI)", 80],
+                    ["Transfer Learning", 80],
+                    ];
+                    generateProgressItems('items1', items);
+                </script>
             </div>
 
 
             <div class="skill">
                 <div class="head">
                     <div class="left">
-                        <span class="material-icons-sharp">design_services</span>
-                        <h4>Chat-bot Development</h4>
+                        <span class="material-icons-sharp">diversity_3</span>
+                        <h4>MLOPS</h4>
                     </div>
                     <div class="right">
                         <span class="material-icons-sharp">expand_more</span>
                     </div>
                 </div>
 
-                <div class="items">
-                    <div class="item">
-                        <h5>GPT-3</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>92%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>GPT-4</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>85%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>langchain</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>85%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>llamaindex</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Dialog Management</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>LlmOps</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Retrieval Augmented Generation</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Word and Sentence Embeddings</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Transformers</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Vector Stores</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Knowledge Graphs</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Prompt Engineering</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                </div>
+                <div class="items" id="items2"></div>
+                <script src="scripts/functions.js"></script>
+                <script>
+                    var items = [
+                        ["Continuous Integration and Continuous Deployment (CI/CD) for ML", 100],
+                        ["Model Versioning and Management", 100],
+                        ["Automated Model Testing and Validation", 100],
+                        ["Azure Machine Learning", 100],
+                        ["Databricks", 100],
+                        ["Model Monitoring", 100],
+                        ["Model Experimentation and Tracking (Mlflow)", 100],
+                        ["Deployment", 100],
+                        ["ML Infrastructure and Resource Management (IaaC)", 100],
+                        ["Agile and Scrum", 100]
+                    ];
+                    generateProgressItems('items2', items);
+                </script>
             </div>
 
             <div class="skill">
                 <div class="head">
                     <div class="left">
-                        <span class="material-icons-sharp">design_services</span>
-                        <h4>Software Engineering</h4>
+                        <span class="material-icons-sharp">payments</span>
+                        <h4>Finance</h4>
                     </div>
                     <div class="right">
                         <span class="material-icons-sharp">expand_more</span>
                     </div>
                 </div>
 
-                <div class="items">
-                    <div class="item">
-                        <h5>Python</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>92%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Flask</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>85%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>FastAPI</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>85%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>SQL</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>SQLAlchemy</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>PostgreSQL</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Elasticsearch</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Celery</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Redis</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Design Patterns</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Data Structures and Algorithms</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                    <div class="item">
-                        <h5>Quality Assurance</h5>
-                        <div class="progress-area">
-                            <div class="progress-bar">
-                                <div class="progress"></div>
-                            </div>
-                            <!-- <h5>75%</h5> -->
-                        </div>
-                    </div>
-                </div>
+                <div class="items" id="items3"></div>
+                <script src="scripts/functions.js"></script>
+                <script>
+                    var items = [
+                        ["ESG Integration in Investment Analysis", 100],
+                        ["Corporate Finance Fundamentals", 100],
+                        ["Valuation Techniques and Models", 100],
+                        ["Fixed Income Securities Analysis", 100],
+                        ["Credit Risk Assessment and Management", 100],
+                        ["Interest Rate Risk Management", 100],
+                        ["Bond Pricing and Yield Analysis", 100],
+                        ["Portfolio Management Strategies for Fixed Income", 100],
+                        ["Financial Markets and Instruments Research", 100],
+                        ["Capital Structure and Funding Strategies", 100],
+                        ["Regulatory Compliance and Reporting in Finance", 100]
+                    ];
+                    generateProgressItems('items3', items);
+                </script>
             </div>
+
 
         </div>
     </section>
