Link cv to cloud

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </p>
                     <a href="#contact" class="btn btn-primary">Let's Talk</a>
                     <a
-                        href="./assets/documents/CV - Daniel Ruiz.pdf"
+                        href="https://thewebsiteofdaniel-files.s3.amazonaws.com/cv/CV+-+Daniel+Ruiz.pdf"
                         class="btn btn-primary"
                         download="CV - Daniel Ruiz.pdf"
                     >
@@ -348,7 +348,7 @@
                         <h2>My Website</h2>
                         <p>
                             Yes, this website is available on my GitHub. It has been built from
-                            open-sourced templates. You may copy it too, aas long as you keep the
+                            open-sourced templates. You may copy it too, as long as you keep the
                             license.
                         </p>
                         <div class="action">
