Update index.html with Streamlit example

--- a/index.html
+++ b/index.html
@@ -343,6 +343,23 @@
 
                     <div class="project">
                         <div class="thumbnail">
+                            <img src="./assets/images/retirement-in-italy.png" alt="" />
+                        </div>
+                        <h2>Streamlit App with Fiscal Benefit Map</h2>
+                        <p>
+                            Streamlit is a very power data visualization tool, that expedites building apps with minimal infrastructure requirements. In this project, I use Streamlit to graphically identify which Italian municipalities offer fiscal benefits for incoming retirees. This project leverages knowledge of Technology, Data, Fiscal Optimization, and Italy.
+                        </p>
+                        <div class="action">
+                            <a href="https://github.com/thegitofdaniel/retirement_in_italy" target="_blank">
+                                Github
+                            </a>
+                            <a href="https://thegitofdaniel.github.io/retirement_in_italy" target="_blank">Web Deployment</a>
+                            <a href="https://retirementinitaly.streamlit.app/" target="_blank">Streamlit Deployment</a>
+                        </div>
+                    </div>
+                    
+                    <div class="project">
+                        <div class="thumbnail">
                             <img src="./assets/images/thewebsiteofdaniel.png" alt="" />
                         </div>
                         <h2>My Website</h2>
